# aws-uploader-performance-tests

./: .env.example  .gitignore  README.md  pyproject.toml
.github/: CODEOWNDERS
behaviours/: uploader_behaviour.py
config/: env_config.py  thresholds.py
metrics/: custom_metrics.py  response_handlers.py
performance_tests/load/: load.conf  uploader_load_test.py
performance_tests/spike/: shapes.py  spike.conf  uploader_spike_test.py
performance_tests/stress/: shapes.py  stress.conf  uploader_stress_test.py
utils/: helpers.py
